# freeze

./: .gitignore  LICENSE  README.md  requirements-test.txt  setup.cfg
.github/workflows/: pytest.yml  test.yml
src/freeze/: __init__.py  freeze.py  thaw.py
tests/: test_freeze.py
