[metadata]
name = freeze
version = 0.0.1
author = Hagai Weinfeld
author_email = hagai.weinfeld@gmail.com
description = Frozen implementations of your favorite collections.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hagaiw/freeze
project_urls =
    Bug Tracker = https://github.com/hagaiw/freeze/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src